--- a/2018DMT/view/wwwroot/University/CreateJob.html
+++ b/2018DMT/view/wwwroot/University/CreateJob.html
@@ -5,6 +5,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 		<link rel="stylesheet" href="css/bootstrap.css" />
+		<script type="text/javascript" src="js/jquery.min3.3.1.js" ></script>
+		<script type="text/javascript" src="js/js.cookie.min.js" ></script>
 		<title></title>
 		<style>
 			.item {
@@ -14,65 +16,128 @@
 	</head>
 
 	<body>
+				<nav class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+					<a class="navbar-brand" href="index.html">大学帮</a>
+				</div>
+
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li class="active">
+							<a href="index.html">大学圈子 <span class="sr-only">(current)</span></a>
+						</li>
+						<li> 
+							<a href="#">互帮互助 <span class="sr-only">(current)</span></a>
+						</li>
+						<li>
+							<a href="#">工作资讯</a>
+						</li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li>
+							<a id="btn_nlogin" data-toggle="modal" data-target="#myModal">登录</a>
+						</li>
+						
+						<li>
+							<a id="btn_register" href="register.html">注册</a>
+						</li>
+						<li id="userinfo" class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">登录 <span class="caret"></span></a>
+							<ul class="dropdown-menu">
+								<li>
+									<a>登录</a>
+								</li>
+								<li>
+									<a href="#">Another action</a>
+								</li>
+								<li>
+									<a href="#">Something else here</a>
+								</li>
+								<li role="separator" class="divider"></li>
+								<li>
+									<a href="#">Separated link</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div> 
+			</div> 
+		</nav> 
+	<script>
+			var user = Cookies.get('user')
+			if(user == null) {
+			$('#userinfo').hide()
+			} else {
+				
+			}
+		</script>
 		<div class="container">
 			<div>
 				<div class="input-group item">
-					<span class="input-group-addon" id="basic-addon1">工作名称：</span>
-					<input id="gzmc" type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+					<span class="input-group-addon" >工作名称：</span>
+					<input id="gzmc" type="text" class="form-control" placeholder="请填写工作名称" aria-describedby="basic-addon1">
 				</div>
 				<div class="input-group item">
-					<span class="input-group-addon" id="basic-addon1">薪资</span>
-					<input id="xz" type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+					<span class="input-group-addon" >薪资</span>
+					<input id="xz" type="text" class="form-control" placeholder="月/日/时" aria-describedby="basic-addon1">
 				</div>
 				<div class="input-group item">
-					<span class="input-group-addon" id="basic-addon1">工作时间</span>
-					<input id="gzsj" type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+					<span class="input-group-addon" >工作时间</span>
+					<input id="gzsj" type="text" class="form-control" placeholder="基本上班时间" aria-describedby="basic-addon1">
 				</div>
 				<div class="input-group item">
-					<span class="input-group-addon" id="basic-addon1">有无双休</span>
+					<span class="input-group-addon" >有无双休</span>
 					<select id="sx" class="form-control">
 						<option value="1">有</option>
 						<option value="-1">无</option>
 					</select>
 				</div>
 				<div class="input-group item">
-					<span class="input-group-addon" id="basic-addon1">是否接送</span>
+					<span class="input-group-addon" >是否接送</span>
 					<select id="js" class="form-control">
 						<option value="1">有</option>
 						<option value="-1">无</option>
 					</select>
 				</div>
 				<div class="input-group item">
-					<span class="input-group-addon" id="basic-addon1">是否包吃</span>
+					<span class="input-group-addon" >是否包吃</span>
 					<select id="bc" class="form-control">
 						<option value="1">有</option>
 						<option value="-1">无</option>
 					</select>
 				</div>
 				<div class="input-group item">
-					<span class="input-group-addon" id="basic-addon1">是否包住</span>
+					<span class="input-group-addon" >是否包住</span>
 					<select id="bz" class="form-control">
 						<option value="1">有</option>
 						<option value="-1">无</option>
 					</select>
 				</div>
 				<div class="input-group item">
-					<span class="input-group-addon" id="basic-addon1">五险一金</span>
+					<span class="input-group-addon" >五险一金</span>
 					<select id="wxyj" class="form-control">
 						<option value="1">有</option>
 						<option value="-1">无</option>
 					</select>
 				</div>
 				<div class="input-group item">
-					<span class="input-group-addon" id="basic-addon1">工作地点</span>
-					<input id="gzdd" type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+					<span class="input-group-addon" >工作地点</span>
+					<input id="gzdd" type="text" class="form-control" placeholder="工作地点" aria-describedby="basic-addon1">
 				</div>
 				<div class="input-group item">
-					<span class="input-group-addon" id="basic-addon1">招聘人数</span>
-					<input id="zprs" type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+					<span class="input-group-addon" >招聘人数</span>
+					<input id="zprs" type="text" class="form-control" placeholder="需要人数" aria-describedby="basic-addon1">
 				</div>
 				<div class="input-group item">
-					<span class="input-group-addon" id="basic-addon1">性别要求</span>
+					<span class="input-group-addon" >性别要求</span>
 					<select id="xbyq" class="form-control">
 						<option value="1">无</option>
 						<option value="1">女</option>
@@ -80,14 +145,14 @@
 					</select>	
 				</div>
 				<div class="input-group item">
-					<span class="input-group-addon" id="basic-addon1">电话</span>
-					<input id="sj" type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+					<span class="input-group-addon" >电话</span>
+					<input id="sj" type="text" class="form-control" placeholder="请填写你的手机号码" aria-describedby="basic-addon1">
 				</div>
 			</div>
 			<div class="form-group item">
 				<label for="jobDetail">工作详情</label>
 				<textarea id="gzxq" class="form-control" id="jobDetail" rows="3"></textarea>
-			</div>
+			</div> 
 			<div style="width: 80%;margin: 0 auto;">
 				<button id="btn_fbgz" class="btn btn-success btn-block" style="margin: 0 auto;">发布工作</button>
 			</div>
